ProdIND/ProdPrograms/force-app/main/default/objects/Ola_BRE_Response_Payload__e/Ola_BRE_Response_Payload__e.object-meta.xml
<CustomObject>
    <label>Ola BRE Response Payload</label>
    <pluralLabel>Ola BRE Response Payloads</pluralLabel>
</CustomObject>