ProdIND/ProdPrograms/force-app/main/default/objects/Ola_BRE_Response_Payload__e/fields/BRE_Payload__c.field-meta.xml
<CustomField>
    <fullName>BRE_Payload__c</fullName>
    <label>BRE Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>