ProdIND/ProdPrograms/force-app/main/default/objects/Ola_BRE_Response_Payload__e/fields/BRE_Payload_Ext__c.field-meta.xml
<CustomField>
    <fullName>BRE_Payload_Ext__c</fullName>
    <label>BRE Payload Ext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>