ProdIND/ProdPrograms/force-app/main/default/objects/Ola_BRE_Response_Payload__e/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <label>Loan Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>